--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <tbody>
             <tr>
               <td class="title"><h1>Conocerte</h1></td>
-              <td class="" title="Carta Virtual"><h3></h3></td>
+              <td class="centrar" title="Carta Virtual"><h3></h3></td>
               <td class="flotar"><h5>Martes 21 de mayo 2024, 13:00</h5></td>
             </tr>
           </tbody>
